--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -104,9 +104,9 @@
                   </li>
                   <li>
                     <strong class="e-mr-16">Import src/main.scss or elvis.min.css in your stylesheet:</strong>
-                    <app-copy [message]="'@import \'~@elvia/elvis/src/main.scss\';'">
+                    <app-copy [message]="'@use \'~@elvia/elvis/src/main.scss\';'">
                       <ng-container ngProjectAs="copyContent">
-                        <code class="code-text">@import '~@elvia/elvis/src/main.scss';</code>
+                        <code class="code-text">@use '~@elvia/elvis/src/main.scss';</code>
                       </ng-container>
                     </app-copy>
                   </li>
