--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.scss
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.scss
@@ -1,20 +1,20 @@
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 .alert-type-container-desktop {
   display: none;
-  @include breakpoint-up(MaxDesktop) {
+  @include breakpoints.breakpoint-up(MaxDesktop) {
     display: block;
   }
 }
 .e-table-mobile {
   display: none;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     display: block;
   }
 }
 .e-table-container {
   display: block;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     display: none;
   }
 }
@@ -22,11 +22,11 @@
   display: flex;
   justify-content: space-between;
 
-  @include breakpoint-up(MinDesktop) {
+  @include breakpoints.breakpoint-up(MinDesktop) {
     flex-direction: column;
     justify-content: flex-start;
   }
-  @include breakpoint-up(MaxDesktop) {
+  @include breakpoints.breakpoint-up(MaxDesktop) {
     display: none;
   }
 
@@ -38,7 +38,7 @@
     justify-content: flex-start;
     text-align: center;
     margin-top: 24px;
-    @include breakpoint-up(MinDesktop) {
+    @include breakpoints.breakpoint-up(MinDesktop) {
       text-align: left;
     }
 
@@ -51,10 +51,10 @@
         &:last-of-type {
           margin-left: 16px;
         }
-        @include breakpoint-up(MinDesktop) {
+        @include breakpoints.breakpoint-up(MinDesktop) {
           height: 170px;
         }
-        @include breakpoint-up(Mobile) {
+        @include breakpoints.breakpoint-up(Mobile) {
           margin-left: 0px;
           height: 130px;
         }
@@ -67,7 +67,7 @@
   display: flex;
   align-items: center;
   margin-top: 56px;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     flex-direction: column;
     align-items: flex-start;
   }
@@ -78,14 +78,14 @@
     @media screen and (-ms-high-contrast: none) {
       margin-right: 48px + 48px;
     }
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       margin-right: 0px;
     }
   }
   .title {
     display: flex;
 
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       margin-top: 16px;
     }
   }
