--- a/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.scss
+++ b/packages/web/src/app/doc-pages/components/popover-doc/popover-doc.component.scss
@@ -1,14 +1,14 @@
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 .usage-image-desktop {
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     display: none;
   }
 }
 
 .usage-image-mobile {
   display: none;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     display: block;
   }
 }
@@ -18,13 +18,13 @@
   @media (max-width: 1300px) {
     height: 300px;
   }
-  @include breakpoint-up(Tablet) {
+  @include breakpoints.breakpoint-up(Tablet) {
     height: 400px;
   }
 }
 
 .e-content-loader {
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     display: none;
   }
 }
