--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.scss
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.scss
@@ -1,11 +1,11 @@
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 .overview-example {
   width: 70%;
-  @include breakpoint-up(MinDesktop) {
+  @include breakpoints.breakpoint-up(MinDesktop) {
     width: 100%;
   }
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     width: 100%;
   }
 }
