--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.scss
@@ -1,4 +1,4 @@
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 :host {
   width: 100%;
@@ -9,7 +9,7 @@
   &.full-width {
     width: 100%;
   }
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     width: 70%;
     &.full-width {
       width: 100%;
@@ -18,7 +18,7 @@
 }
 @mixin second-col {
   width: 20%;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     width: 30%;
   }
 }
@@ -46,7 +46,7 @@
     max-width: 788px;
     margin-bottom: 24px;
     @include first-col;
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       width: 100%;
     }
     .ceg-dropdown-wrapper {
@@ -54,7 +54,7 @@
       flex-direction: row;
       justify-content: space-between;
       width: 75%;
-      @include breakpoint-up(Mobile) {
+      @include breakpoints.breakpoint-up(Mobile) {
         width: 100%;
       }
       .ceg-dropdown {
@@ -74,7 +74,7 @@
       }
     }
     .ceg-customize-popover {
-      @include breakpoint-up(Mobile) {
+      @include breakpoints.breakpoint-up(Mobile) {
         display: none;
       }
       padding-left: 24px;
@@ -93,13 +93,13 @@
   }
 
   .ceg-side-filters-desktop {
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       display: none;
     }
   }
   .ceg-side-filters-mobile {
     display: none;
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       display: block;
       position: absolute;
       right: 8px;
@@ -108,7 +108,7 @@
   }
   .ceg-customize-popover-mobile {
     display: none;
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       display: block;
       position: absolute;
       right: 56px;
@@ -130,7 +130,7 @@
     position: relative;
     .ceg-col-1 {
       @include first-col;
-      @include breakpoint-up(Mobile) {
+      @include breakpoints.breakpoint-up(Mobile) {
         width: 100%;
       }
     }
@@ -140,7 +140,7 @@
   }
   .ceg-row-2 {
     @include first-col;
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       width: 100%;
     }
   }
@@ -156,7 +156,7 @@
     border: 1px solid var(--e-grey-10);
     border-radius: 8px;
 
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       padding: 24px;
       padding-top: 56px;
     }
@@ -164,7 +164,7 @@
     &.ceg-code-preview--accordion {
       align-items: flex-start;
       padding-top: 80px;
-      @include breakpoint-up(Tablet) {
+      @include breakpoints.breakpoint-up(Tablet) {
         padding-top: 56px;
       }
     }
