--- a/packages/web/src/app/shared/do-dont/do-dont.component.scss
+++ b/packages/web/src/app/shared/do-dont/do-dont.component.scss
@@ -1,10 +1,10 @@
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 .doDont-container {
   display: inline-block;
   width: 50%;
   margin-bottom: 8px;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     display: flex;
     flex-direction: column;
     max-width: fit-content;
@@ -14,7 +14,7 @@
   .doDont,
   .doDo {
     margin: 0 8px;
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       margin: 0;
     }
   }
@@ -48,7 +48,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     margin-top: -24px;
   }
 
