--- a/packages/web/src/app/shared/when-to-use/when-to-use.component.scss
+++ b/packages/web/src/app/shared/when-to-use/when-to-use.component.scss
@@ -1,4 +1,4 @@
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 .when {
   display: flex;
@@ -24,7 +24,7 @@
     }
   }
 
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     flex-direction: column;
     .when-to-use,
     .when-not-to-use {
