--- a/packages/web/src/app/shell/footer/footer.component.scss
+++ b/packages/web/src/app/shell/footer/footer.component.scss
@@ -1,9 +1,9 @@
-@import '../../shared/shared-sizes.scss';
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
+@use '../../shared/shared-sizes.scss' as sizes;
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 
 .footer {
   position: relative;
-  height: $footer-height;
+  height: sizes.$footer-height;
   z-index: 1000;
   display: flex;
   flex-direction: column;
@@ -11,8 +11,8 @@
   overflow: hidden;
   background-color: var(--e-grey);
   color: var(--e-white);
-  @include breakpoint-up(Mobile) {
-    height: calc(#{$footer-height} + 25px);
+  @include breakpoints.breakpoint-up(Mobile) {
+    height: calc(#{sizes.$footer-height} + 25px);
   }
 
   @media screen and (-ms-high-contrast: none) {
@@ -44,7 +44,7 @@
     align-items: center;
     height: calc(100% - 3.7vw);
     padding: 16px 48px 0;
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       height: calc((100% - 3.7vw) + 25px);
       padding: 8px 24px 0;
     }
