--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.scss
@@ -1,6 +1,6 @@
-@import '../../../shared/shared-sizes';
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
-@import '@elvia/elvis/src/variables/typography.scss';
+@use '../../../shared/shared-sizes';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
+@use '@elvia/elvis/src/variables/typography.scss' as typography;
 
 .header {
   position: fixed;
@@ -42,7 +42,7 @@
   box-sizing: border-box;
   padding-top: 48px;
 
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     padding-top: 32px;
   }
 
@@ -64,7 +64,7 @@
     background-color: var(--e-white);
     width: 50%;
 
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       width: 80%;
     }
 
@@ -77,7 +77,7 @@
 
         .text {
           display: flex;
-          @include typography('title-caps');
+          @include typography.typography('title-caps');
         }
 
         .links-icon {
