--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -2,13 +2,13 @@
 @use 'prismjs/plugins/toolbar/prism-toolbar';
 @use 'prismjs/themes/prism-okaidia';
 
-/* Elvia Styleguide */
-@import '@elvia/elvis/src/main.scss';
-@import '@elvia/elvis/src/utilities/breakpoints.scss';
-@import '@elvia/elvis/src/variables/typography.scss';
+@use 'app/shared/shared-sizes' as sizes;
+@use 'app/shared/shared-animations' as animation;
 
-@import './app/shared/shared-sizes';
-@import './app/shared/shared-animations';
+/* Elvia Styleguide */
+@use '@elvia/elvis/src/main.scss';
+@use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
+@use '@elvia/elvis/src/variables/typography.scss' as typography;
 
 // Prebuilt css for enabling use of overlays from @angular/cdk
 @import '@angular/cdk/overlay-prebuilt.css';
@@ -79,7 +79,7 @@ p {
   margin-right: 8px;
   border: 1px solid black;
   border-radius: 64px;
-  @include typography('text-sm');
+  @include typography.typography('text-sm');
   &:not(:first-of-type) {
     margin: 0 8px;
   }
@@ -107,13 +107,13 @@ p {
       max-width: 75rem;
     }
   }
-  @include breakpoint-up(MinDesktop) {
+  @include breakpoints.breakpoint-up(MinDesktop) {
     margin: 0 auto;
   }
 }
 
 .overview-page-title-container {
-  @include breakpoint-up(Tablet) {
+  @include breakpoints.breakpoint-up(Tablet) {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -121,7 +121,7 @@ p {
 }
 
 .overview-page-title-size {
-  @include breakpoint-up(Tablet) {
+  @include breakpoints.breakpoint-up(Tablet) {
     display: flex;
     width: 100%;
     padding: 0px;
@@ -141,7 +141,7 @@ p {
       margin-top: 0px;
       margin-bottom: 40px;
     }
-    @include breakpoint-up(MinDesktop) {
+    @include breakpoints.breakpoint-up(MinDesktop) {
       margin: 0;
     }
   }
@@ -150,7 +150,7 @@ p {
     justify-content: center;
     align-items: center;
 
-    @include breakpoint-up(Mobile) {
+    @include breakpoints.breakpoint-up(Mobile) {
       display: none;
     }
 
@@ -158,7 +158,7 @@ p {
       width: 100%;
       padding-bottom: 42.363%;
       position: relative;
-      @include breakpoint-up(MinDesktop) {
+      @include breakpoints.breakpoint-up(MinDesktop) {
         padding-bottom: 45.863%;
       }
     }
@@ -166,7 +166,7 @@ p {
       width: 60.5%;
       transition: width ease-in 250ms;
 
-      @include breakpoint-up(MinDesktop) {
+      @include breakpoints.breakpoint-up(MinDesktop) {
         width: 65.5%;
         transition: width ease-in 250ms;
       }
@@ -182,7 +182,7 @@ p {
       margin: auto;
       padding: 56px;
       padding-top: 72px;
-      @include breakpoint-up(MinDesktop) {
+      @include breakpoints.breakpoint-up(MinDesktop) {
         padding: 16px;
         padding-top: 54px;
       }
@@ -199,18 +199,18 @@ p {
       font-size: 24px;
       line-height: 160%;
     }
-    @include breakpoint-up(Tablet) {
+    @include breakpoints.breakpoint-up(Tablet) {
       display: none;
     }
   }
   .phone-overview {
     display: none;
-    @include breakpoint-up(Tablet) {
+    @include breakpoints.breakpoint-up(Tablet) {
       display: block;
     }
   }
   .desktop-overview {
-    @include breakpoint-up(Tablet) {
+    @include breakpoints.breakpoint-up(Tablet) {
       display: none;
     }
   }
@@ -224,7 +224,7 @@ p {
   line-height: 32px;
   display: flex;
   flex-direction: row;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     flex-direction: column;
   }
 }
@@ -244,7 +244,7 @@ p {
       margin-top: 0;
     }
   }
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     width: 100%;
     .changelog-date-span {
       margin-top: -32px;
@@ -255,7 +255,7 @@ p {
 .changelog-content {
   // padding-top: 48px;
   width: 75%;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     width: 100%;
     //padding-top: 0px;
     //margin-top: -20px;
@@ -376,33 +376,33 @@ p {
 // Page Animations - Fade in
 // Components
 .component-header-description-animation {
-  @include ease-in-opacity(0.2s, 0.1s);
+  @include animation.ease-in-opacity(0.2s, 0.1s);
 }
 .component-preview-animation {
-  @include ease-in-opacity(0.2s, 0.2s);
+  @include animation.ease-in-opacity(0.2s, 0.2s);
 }
 .documentation-section-animation {
-  @include ease-in-opacity(0.3s, 0.2s);
+  @include animation.ease-in-opacity(0.3s, 0.2s);
 }
 // Overview pages
 .components-overview-cards-animation {
-  @include ease-in-out-opacity(0.4s, 0.2s);
+  @include animation.ease-in-out-opacity(0.4s, 0.2s);
 }
 .overview-illustration-animation {
-  @include ease-in-out-opacity(0.4s, 0.2s);
+  @include animation.ease-in-out-opacity(0.4s, 0.2s);
 }
 .overview-description-animation {
-  @include ease-in-out-opacity(0.4s, 0.4s);
+  @include animation.ease-in-out-opacity(0.4s, 0.4s);
 }
 // Home page
 .home-image-animation {
-  @include ease-in-out-opacity(0.6s, 0.28s);
+  @include animation.ease-in-out-opacity(0.6s, 0.28s);
 }
 .home-text-animation {
-  @include ease-in-out-opacity(0.6s, 0.6s);
+  @include animation.ease-in-out-opacity(0.6s, 0.6s);
 }
 .home-card-links-animation {
-  @include ease-in-out-opacity(0.6s, 0.8s);
+  @include animation.ease-in-out-opacity(0.6s, 0.8s);
 }
 
 // Typography - specific for doc
@@ -412,7 +412,7 @@ p {
   font-weight: 900;
   font-size: 56px;
   line-height: 120%;
-  @include breakpoint-up(Mobile) {
+  @include breakpoints.breakpoint-up(Mobile) {
     font-size: 32px;
   }
 }
