--- a/packages/web/src/app/shell/main/main.component.scss
+++ b/packages/web/src/app/shell/main/main.component.scss
@@ -1,5 +1,5 @@
 @use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
-@use '../../shared/shared-sizes.scss';
+@use '../../shared/shared-sizes.scss' as sizes;
 
 .overview-content {
   margin-left: calc(13% + 72px);
@@ -70,7 +70,7 @@
 }
 
 .main-content {
-  min-height: calc(100vh - 40px + 104px - #{$footer-height});
+  min-height: calc(100vh - 40px + 104px - #{sizes.$footer-height});
   border: 8px solid white;
   border-top: none;
   border-left: none;
@@ -79,10 +79,10 @@
   padding-top: 64px;
   padding-bottom: 104px;
   @include breakpoints.breakpoint-up(Tablet) {
-    min-height: calc(100vh - 40px + 104px - #{$footer-height});
+    min-height: calc(100vh - 40px + 104px - #{sizes.$footer-height});
   }
   @include breakpoints.breakpoint-up(Mobile) {
-    min-height: calc(100vh - 32px + 71px - #{$footer-height});
+    min-height: calc(100vh - 32px + 71px - #{sizes.$footer-height});
     padding-bottom: 72px;
   }
 
